2002-06-19  Christopher Faylor  <cgf@redhat.com>

	* fhandler.cc (fhandler_base::set_flags): Change priority of "linked
	in" default binmode setting so that it has priority over optional
	setting.

2002-06-19  Christopher Faylor  <cgf@redhat.com>

	Use hMainProc where appropriate, throughout. 
	* environ.cc (spenv::retrieve): Add debugging statements.

	* pinfo.cc (set_myself): Don't call strace.hello if already stracing.
	* strace.cc (strace): Move NO_COPY keyword so that it will actually
	take effect.

2002-06-19  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (cygheap_user::ontherange): Call NetUserGetInfo() only with
	non-NULL logserver parameter.

2002-06-16  Christopher Faylor  <cgf@redhat.com>

	* cygheap.h (cygheap_user::issetuid): New method.
	* dtable.cc (dtable::vfork_child_dup): Use new method to determine if
	we are in "setuid mode."
	* fork.cc (fork_parent): Ditto.
	* spawn.cc (spawn_guts): Ditto.
	* syscalls.cc (seteuid32): Ditto.
	(setegid32): Ditto.
	* environ.cc (spenv::retrieve): (Suggested by Pierre Humblet) Do
	potential recalculation of cygheap_user stuff when in setuid mode.
	Return special value when environment variable should be calculated but
	not added.
	(build_env): Don't add retrieved value to dstp if it is 'dont_add'.

2002-06-16  Christopher Faylor  <cgf@redhat.com>

	Changes suggested by Pierre Humblet.
	* environ.cc (NL): New macro.
	(conv_envvars): Use NL macro to fill in name and namelen.
	(spenv::namelen): New field.
	(spenvs): Use NL to fill in name and namelen.
	(spenv::retrieve): Eliminate length argument.  Instead, use namelen
	throughout.
	(build_env): Don't calculate length of initial FOO= part of
	environment.  Accommodate spenv::retrive argument change.

2002-06-16  Christopher Faylor  <cgf@redhat.com>

	* cygheap.h (cygheap_user::winname): New field.
	* cygheap.cc (cygheap_user::set_name): Clear winname when name changes.
	* uinfo.cc (cygheap_user::env_logsrv): Avoid calculating server when