@@ -234,7 +234,7 @@ cygwin_internal (cygwin_getinfo_types t, ...)
 	  return p ? p->dwProcessId : 0;
 	}
       case CW_EXTRACT_DOMAIN_AND_USER:
-        {
+	{
 	  struct passwd *pw = va_arg (arg, struct passwd *);
 	  char *domain = va_arg (arg, char *);
 	  char *user = va_arg (arg, char *);
